--- a/app/src/main/res/layout/fragment_support.xml
+++ b/app/src/main/res/layout/fragment_support.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:background="#ffff"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="cardview.com.lokeasy.Support">
+    tools:context="cardview.com.lokeasy.Support"
+    android:clickable="true">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.design.widget.TextInputLayout
